@@ -17,4 +17,6 @@ FROM eclipse-temurin:17-jdk-alpine
 COPY --from=builder /app/target/Music-Web-0.0.1-SNAPSHOT.jar /app.jar
 
 # Lệnh chạy ứng dụng
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+# ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "--add-opens", "java.base/java.io=ALL-UNNAMED", "-jar", "/app.jar"]
+
